# liine-take-home

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: __init__.py  index.py  main.py  models.py  parser.py  routes.py
tests/: test_index.py  test_parser.py  test_routes.py
tests/e2e/: conftest.py  test_container.py
