[project]
name = "liine-take-home"
version = "0.1.0"
description = "Restaurant open-hours lookup API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "testcontainers>=4.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
markers = ["e2e: end-to-end tests that build and run the docker image"]
addopts = "-m 'not e2e'"
